# wucy

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
components/gfx/: gfx.c
components/gfx/include/: gfx.h
components/ssd1351/: hal.c  ssd1351.c  user_hal.c
components/ssd1351/include/: hal.h
main/: CMakeLists.txt  main.c
wucy/: Makefile  wucy-code-structure.drawio
wucy/RotaryEncoder/: CMakeLists.txt  RotaryEncoder.cpp  RotaryEncoder.h
wucy/_docs/: docs.md  wucy-code-structure.drawio
wucy/_documentation/: readme.md
wucy/bouncer/: CMakeLists.txt  bouncer.cpp  bouncer.hpp
wucy/button/: button.cpp
wucy/components/ssd1351/: component.mk  ssd1351.c  user_hal.template
wucy/display/gfx/: CMakeLists.txt
wucy/documentation/: documentation.md  documentation.txt
wucy/fatfs/: CMakeLists.txt  diskio.c
wucy/gfx/: CMakeLists.txt  gfx.c
wucy/gfx/include/: gfx.h
wucy/gfx/ssd1351/: api.c  ssd1351.c  user_hal.c
wucy/kernel/: CMakeLists.txt  api.c  hal.c  kernel.c
wucy/kernel/include/: hal.h  wucy.h  wucyOS.h  (+1 more)
wucy/main/: main.c
wucy/sd_card/: CMakeLists.txt  sd_card.cpp  sd_card.hpp
wucy/ssd1351/: CMakeLists.txt  ssd1351.c
wucy/ui/: CMakeLists.txt  objetct.cpp  ui.c  ui.cpp  ui_menu.hpp
wucy/window/: CMakeLists.txt  gfx.c  window-framing.drawio  window.c  window.cpp
wucy/window/AdafruitGFX/: Adafruit_GFX.cpp  Adafruit_GFX.h  gfxfont.h
wucy/window/AdafruitGFX/fontconvert/: Makefile  fontconvert.c
wucy/window/include/: gfx.h  window.h  window.hpp
wucy/wucy_api/: CMakeLists.txt  api.c  hal.c
(+19 files in other folders)
